--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -50,15 +50,15 @@
 							<div class="wrapper">
 								<div class="inner">
 
-									<section>
+									<section id="four" class="wrapper alt style1">
 									    <h2 class="major">
 										    1. óra
 									    </h2>
-										<h3>Minimumelvek</h3>
+										<h3>Hatáselvek</h3>
 
 										<p style="text-align: justify;">
 											Az óra célja röviden az, hogy megismerkedjünk a variációs módszerekkel.
-											Ez gyakorlatilag egy új nyelv, amire az eddig megszokotthoz (rajzolni egy diagramot az erőkkel, aztán \(\Vec{F}=m\Vec{a}$)\) hasonlóan le lehet fordítani azt, hogy mi történik a világban.
+											Ez gyakorlatilag egy új nyelv, amire az eddig megszokotthoz (rajzolni egy diagramot az erőkkel, aztán \(\Vec{F}=m\Vec{a}$ \)) hasonlóan le lehet fordítani azt, hogy mi történik a világban.
 											Az előnye az, hogy általában sokkal könnyebb felírni így a mozgást leíró egyenleteket, mégha megoldani nem is mindig lehet azokat.
 											Mellékesen pedig ezen a nyelven lesz olvasható a későbbiekben két egész fontos ága a tudományunknak: a kvantumfizika és az általános relativitáselmélet.
 										</p>
@@ -70,7 +70,7 @@
 											$$
 												\mathcal{S} = \mathcal{S}[f(\Gamma)]
 											$$
-											Ami nevesítve azt mondja, hogy \(\mathcal{S}\) egy funkcionál: ahogyan egy \(f\) függvény (\textit{function}) egy számhoz hozzárendel egy másikat, az \(\mathcal{S}\) funkcionál egy függvényhez rendel hozzá egy számot.
+											Ami nevesítve azt mondja, hogy \(\mathcal{S}\) egy funkcionál: ahogyan egy \(f\) függvény (<i>function</i>) egy számhoz hozzárendel egy másikat, az \(\mathcal{S}\) funkcionál egy függvényhez rendel hozzá egy számot.
 										</p>
 										<p style="text-align: justify;">
 											A fizika ott kezdődik, hogy eközül a sok út közül csak egy lehet reális: az alma nem keringőzik a levegőben, hanem leesik.
@@ -81,20 +81,10 @@
 											$$
 										</p>
 										<div style="text-align: center;">
-											<img src="figs/lesson1/abstractpaths.png" alt="Az igazi és a lehetséges utak">
+											<img src="figs/lesson1/abstractpaths.png" alt="Az igazi és a lehetséges utak" width="45%">
 										</div>
-									<!--
-							        <p>Az előadáson eljutottunk két fontos elvhez:</p>
-									<p>
-				                        \( \displaystyle
-				                           \mathcal{S}_0 = \int |\vec{p}|\,\mathrm{d}s 
-				                           \quad 
-				                           \mathcal{T} = \int n(s)\,\mathrm{d}s
-				                        \)
-				                    </p>
-				                    <p>amikről nagyjából beláttuk, hogy azonosak. A Fermat elvet már ismeritek, és levezettétek belőle a Snellius-Descartes törvényt, miszerint fénytörés esetén a beesési szögek és a törésmutatók közti összefüggés:</p>
-									-->
 									</section>
+									
 
 								</div>
 							</div>
