--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -11,6 +11,24 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css">
 		<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js"></script>
 		<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/contrib/auto-render.min.js" onload="renderMathInElement(document.body)"></script>
+		<script>
+		  document.addEventListener("DOMContentLoaded", () => {
+		    renderMathInElement(document.body, {
+		      // choose exactly the pairs you want
+		      delimiters: [
+		        { left: "$$", right: "$$", display: true  },  // display math
+		        { left: "\
+		
+		\[", right: "\\]
+		
+		", display: true  },  // display TeX style
+		        { left: "\\(", right: "\\)", display: false }   // inline TeX style
+		        { left: "$",  right: "$", display: false }  // uncomment to allow dollar inline
+		      ],
+		      // you can also disable or tweak other settings here
+		    });
+		  });
+		</script>
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -46,7 +64,65 @@
 				<!-- Wrapper -->
 					<section id="wrapper">
 
+						<section id="one" class="wrapper spotlight style1">
+							<div class="inner">
+								<h2 class="major">
+									1. óra
+								</h2>
+								<h3>Hatáselvek</h3>
+	
+								<p style="text-align: justify;">
+									Az óra célja röviden az, hogy megismerkedjünk a variációs módszerekkel.
+									Ez gyakorlatilag egy új nyelv, amire az eddig megszokotthoz (rajzolni egy diagramot az erőkkel, aztán $\vec{F}=m\vec{a} $) hasonlóan le lehet fordítani azt, hogy mi történik a világban.
+									Az előnye az, hogy általában sokkal könnyebb felírni így a mozgást leíró egyenleteket, mégha megoldani nem is mindig lehet azokat.
+									Mellékesen pedig ezen a nyelven lesz olvasható a későbbiekben két egész fontos ága a tudományunknak: a kvantumfizika és az általános relativitáselmélet.
+								</p>
+								<p style="text-align: justify;">
+									Mechanikáról léve szó, azt szeretnénk megtudni, hogy hogyan jutunk el valamilyen $A$ pontból a $B$-be.
+									Ezt sokféle úton lehetne megtenni, sok féle $\Gamma$ görbén; amik mentén változhat a "fizika" valamilyen (egyelőre) ismeretlen $f$ függvények által kódolva.
+									A függvények és a görbék relatíve bonyolult dolgok, ezért keressünk valami egyszerűbbet, mondjuk egy számot amit hívjunk $\mathcal{S}$-nek.
+									Hogy ez is kódolja az összes eddigi információt, legyen absztraktul
+									$$
+										\mathcal{S} = \mathcal{S}[f(\Gamma)]
+									$$
+									Ami nevesítve azt mondja, hogy $\mathcal{S}$ egy funkcionál: ahogyan egy $f$ függvény (<i>function</i>) egy számhoz hozzárendel egy másikat, az $\mathcal{S}$ funkcionál egy függvényhez rendel hozzá egy számot.
+								</p>
+								<p style="text-align: justify;">
+									A fizika ott kezdődik, hogy eközül a sok út közül csak egy lehet reális: az alma nem keringőzik a levegőben, hanem leesik.
+									Kitüntetett szerepe annak az útnak lesz, ahol ez az $\mathcal{S}$ hatás alig változik: extrémuma van.
+									A legkisebb hatás elve szerint tehát az lesz a fizikailag megvalósuló pálya, amelynek mentén
+									$$
+										\delta \mathcal{S} = 0
+									$$
+								</p>
+								<div style="text-align: center;">
+									<img src="figs/lesson1/abstractpaths.png" alt="Az igazi és a lehetséges utak" width="45%">
+								</div>
+							</div>
+						</section>
+
+						<section id="two" class="wrapper alt style3">
+							<h3>Korai minimumelvek</h3>
+
+							<p>
+								A kérdés már csak az, hogy mi is ez az $\mathcal{S}$ hatás.
+								Először néhány történelmi példával kezdünk, és megbarátkozunk a minimalizálásával.
+								Az előadáson hallhattunk két fontos elvet:
+								$$
+									\mathcal{S}_0 = \int |\Vec{p}| \rd s \quad \mathcal{T} = \int n(s) \rd s
+								$$
+								amikről beláthattuk, hogy azonosan viselkednek.
+								A Fermat elvet már ismeritek, és levezettétek belőle a Snellius-Descartes törvényt, miszerint fénytörés esetén a beesési szögek és a törésmutatók közti összefüggés:
+								$$
+									n_1 \sin{\varphi_1} = n_2 \sin{\varphi_2}
+								$$
+								A Maupertuis elv még új, szóval első példáinkban barátkozzunk vele egy kicsit.
+							</p>
+							
+						</section>
+
 						<!-- Content -->
+						<!--
 							<div class="wrapper">
 								<div class="inner">
 
@@ -93,7 +169,7 @@
 											Először néhány történelmi példával kezdünk, és megbarátkozunk a minimalizálásával.
 											Az előadáson hallhattunk két fontos elvet:
 											$$
-											    \mathcal{S}_0 = \int |\Vec{p}| \rd s && \mathcal{T} = \int n(s) \rd s
+											    \mathcal{S}_0 = \int |\Vec{p}| \rd s \quad \mathcal{T} = \int n(s) \rd s
 											$$
 											amikről beláthattuk, hogy azonosan viselkednek.
 											A Fermat elvet már ismeritek, és levezettétek belőle a Snellius-Descartes törvényt, miszerint fénytörés esetén a beesési szögek és a törésmutatók közti összefüggés:
@@ -109,6 +185,7 @@
 							</div>
 
 					</section>
+						-->
 
 				<!-- Footer -->
 					<section id="footer">
