--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -64,7 +64,7 @@
 				<!-- Wrapper -->
 					<section id="wrapper">
 
-						<section id="one" class="wrapper spotlight style1">
+						<section id="one" class="wrapper alt style3">
 							<div class="inner">
 								<h2 class="major">
 									1. óra
@@ -101,7 +101,7 @@
 							</div>
 						</section>
 
-						<section id="two" class="wrapper alt style3">
+						<section id="two" class="wrapper alt style2">
 							<h3>Korai minimumelvek</h3>
 
 							<p>
