--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -17,12 +17,8 @@
 		      // choose exactly the pairs you want
 		      delimiters: [
 		        { left: "$$", right: "$$", display: true  },  // display math
-		        { left: "\
-		
-		\[", right: "\\]
-		
-		", display: true  },  // display TeX style
-		        { left: "\\(", right: "\\)", display: false }   // inline TeX style
+		        //{ left: "\\[", right: "\\]", display: true  },  // display TeX style
+		       // { left: "\\(", right: "\\)", display: false }   // inline TeX style
 		        { left: "$",  right: "$", display: false }  // uncomment to allow dollar inline
 		      ],
 		      // you can also disable or tweak other settings here
@@ -102,23 +98,23 @@
 						</section>
 
 						<section id="two" class="wrapper alt style2">
-							<h3>Korai minimumelvek</h3>
-
-							<p>
-								A kérdés már csak az, hogy mi is ez az $\mathcal{S}$ hatás.
-								Először néhány történelmi példával kezdünk, és megbarátkozunk a minimalizálásával.
-								Az előadáson hallhattunk két fontos elvet:
-								$$
-									\mathcal{S}_0 = \int |\Vec{p}| \rd s \quad \mathcal{T} = \int n(s) \rd s
-								$$
-								amikről beláthattuk, hogy azonosan viselkednek.
-								A Fermat elvet már ismeritek, és levezettétek belőle a Snellius-Descartes törvényt, miszerint fénytörés esetén a beesési szögek és a törésmutatók közti összefüggés:
-								$$
-									n_1 \sin{\varphi_1} = n_2 \sin{\varphi_2}
-								$$
-								A Maupertuis elv még új, szóval első példáinkban barátkozzunk vele egy kicsit.
-							</p>
-							
+							<div class="inner">
+								<h3>Korai minimumelvek</h3>
+								<p>
+									A kérdés már csak az, hogy mi is ez az $\mathcal{S}$ hatás.
+									Először néhány történelmi példával kezdünk, és megbarátkozunk a minimalizálásával.
+									Az előadáson hallhattunk két fontos elvet:
+									$$
+										\mathcal{S}_0 = \int |\Vec{p}| \rd s \quad \mathcal{T} = \int n(s) \rd s
+									$$
+									amikről beláthattuk, hogy azonosan viselkednek.
+									A Fermat elvet már ismeritek, és levezettétek belőle a Snellius-Descartes törvényt, miszerint fénytörés esetén a beesési szögek és a törésmutatók közti összefüggés:
+									$$
+										n_1 \sin{\varphi_1} = n_2 \sin{\varphi_2}
+									$$
+									A Maupertuis elv még új, szóval első példáinkban barátkozzunk vele egy kicsit.
+								</p>
+							</div>
 						</section>
 
 						<!-- Content -->
