--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -106,9 +106,9 @@
 									Először néhány történelmi példával kezdünk, és megbarátkozunk a minimalizálásával.
 									Az előadáson hallhattunk két fontos elvet:
 									$$
-									\begin{align}
-										\mathcal{S}_0 = \int |\Vec{p}| \rd s && \mathcal{T} = \int n(s) \rd s
-									\end{align}
+									\begin{aligned}
+										\mathcal{S}_0 = \int |\Vec{p}| \rd s \quad\quad \mathcal{T} = \int n(s) \rd s
+									\end{aligned}
 									$$
 									amikről beláthattuk, hogy azonosan viselkednek.
 									A Fermat elvet már ismeritek, és levezettétek belőle a Snellius-Descartes törvényt, miszerint fénytörés esetén a beesési szögek és a törésmutatók közti összefüggés:
@@ -148,12 +148,12 @@
 									Két szöget is be tudunk rajzolni, ezek mindjárt hasznosak is lesznek.
 								</p>
 								<div style="text-align: center;">
-									<img src="figs/lesson1/fermat" alt="Törés paraméterezése" width="55%">
+									<img src="figs/lesson1/fermat.png" alt="Törés paraméterezése" width="55%">
 								</div>
 								<p>
 									A hatásunk egy út szerinti integrál: bontsuk fel ketté.
 									$$
-										\mathcal{S}_0 = \int_{P_1}^{P_2} |\Vec{p}(s)| \rd s = \int_{P_1}^{Q} |\vec{p}_1| \rd s + \int_{Q}^{P_2}|\Vec{p}_2| \rd s
+										\mathcal{S}_0 = \int_{P_1}^{P_2} |\vec{p}(s)| \rd s = \int_{P_1}^{Q} |\vec{p}_1| \rd s + \int_{Q}^{P_2}|\vec{p}_2| \rd s
 									$$
 									Mivel az impulzusok már konstansok, így ami marad az magának az útnak a kiintegrálása.
 									Mivel ez két egyenes hossza, ez egészen egyszerű:
@@ -171,7 +171,7 @@
 									Kis trigonometriával
 									$$
 									\begin{aligned}
-									    \sin{\theta_1} = \frac{x}{\sqrt{x^2 + y_1^2}} \quad \sin{\theta_2} = \frac{x_2 - x}{ \sqrt{(x_2-x)^2 + y_2^2}}
+									    \sin{\theta_1} = \frac{x}{\sqrt{x^2 + y_1^2}} \quad\quad \sin{\theta_2} = \frac{x_2 - x}{ \sqrt{(x_2-x)^2 + y_2^2}}
 									\end{aligned}
 									$$
 									tehát
