--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -345,6 +345,32 @@
 									\end{aligned}
 									$$
 								</p>
+								<p>
+									Minden esetre a megoldásaink:
+									$$
+									\begin{aligned}
+									    \theta = 2n \pi \,, \hspace{10mm} n\in \mathbb{Z}
+									\end{aligned}
+									$$
+									Nekünk ezek közül $\theta=0$ lesz az fontos, minden más ugyanazt jelenti.
+								</p>
+								<p>
+									Érdekes dolgot figyelhetünk meg viszont, ha megnézzük az időtartam \textit{második} deriváltját is a minimumban.
+									$$
+									\begin{aligned}
+									    \left. \partial_\theta^2 \mathcal{T} \right|_{\theta=0}  \propto -R \left[\sin{\frac{\pi}{4}} +\sin{\frac{\pi}{4}} \right] \\
+									    \propto -R \sin{\frac{\pi}{4}}
+									\end{aligned}
+									$$
+									Ami negatív.
+									Visszaidézve a korábbi matekos tudásunkat, ez azt jelenti, hogy a megvalósuló pályánk nem is egy minimumhoz köthető.
+									Pont ellenkezőleg, egy lokális maximumhoz tartozó pályát követ ezesetben a fény.
+								</p>
+								<p>
+									Éppen ezért, most is és a jövőben is, bármikor, ha a <i>legkisebb</i> hatás elvét emlegeti valaki, akkor az általában csak egy megszokott elnevezés.
+									Valójában inkább a <i>szélsőértékes</i> hatás elvére gondolunk, de az sokkal csúnyábban hangzik mind magyarul, mind angolul.
+									(A pontosságra törekedőknek a \textit{stacionárius} a bevett szó.)
+								</p>
 							</div>
 						</section>
 
