--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -355,7 +355,7 @@
 									Nekünk ezek közül $\theta=0$ lesz az fontos, minden más ugyanazt jelenti.
 								</p>
 								<p>
-									Érdekes dolgot figyelhetünk meg viszont, ha megnézzük az időtartam \textit{második} deriváltját is a minimumban.
+									Érdekes dolgot figyelhetünk meg viszont, ha megnézzük az időtartam <i>második</i> deriváltját is a minimumban.
 									$$
 									\begin{aligned}
 									    \left. \partial_\theta^2 \mathcal{T} \right|_{\theta=0}  \propto -R \left[\sin{\frac{\pi}{4}} +\sin{\frac{\pi}{4}} \right] \\
@@ -406,6 +406,26 @@
 									Úgy általánosságban két féle példával fogunk találkozni: lesznek a tipikus feladatok, ahol ezt kell használni ahogy van; és lesznek gondolkodósak, ahol ezt az egyenletet nem lehet csak úgy ráküldeni a problémára.
 									Nézzünk először pár példát az utóbbira.
 								</p>
+								<h3>1.3 példa: Eukleidész</h3>
+								<p>
+									Az első kérdés amit segít megválaszolni a variációszámítás a következő:
+								<p>
+								<p style="text-align: center"><i>Mi a legrövidebb út két pont között?</i></p>
+								<h4>1.3.1 Paraméterezés</h4>
+								<p>
+									Próbáljunk meg elvonatkoztatni attól, hogy tudjuk a választ (egyenes).
+									Ha ez megvolt, akkor rajzoljunk le valami általános görbét $A$ és $B$ pontok közt, ahogy azt az ábrán láthatjuk.
+									Végső soron arra leszünk kíváncsiak, hogy ennek a görbének a hossza mikor lesz minimális: tehát számunkra ő most az $\mathcal{S}$ hatás.
+									Hogy őt megkapjuk egy integrállal, a görbe mentén kell felösszegeznünk a kis $\rd s$ ívelemeket, tehát
+									$$
+									\begin{aligned}
+									    \mathcal{S} = \int_A^B \rd s
+									\end{aligned}
+									$$
+								</p>
+								<div style="text-align: center;">
+									<img src="figs/lesson1/euclides.png" alt="Út két pont között" width="55%">
+								</div>
 							</div>
 						</section>
 
