--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -495,6 +495,37 @@
 									$$
 									az egyenes.
 								</p>
+								<h4>1.3.4 A szebb megoldás</h4>
+								<p>
+									Ehelyett, vegyük észre hogy az Euler-Lagrange egyenlet jobb oldala nulla:
+									$$
+									\begin{aligned}
+									    \frac{\rd}{\rd x} \frac{\partial \mathcal{L}}{\partial y^\prime} = \frac{\partial \mathcal{L}}{\partial y} =0
+									\end{aligned}
+									$$
+									tehát
+									$$
+									     \frac{\partial \mathcal{L}}{\partial y^\prime} = \frac{1}{2}\frac{2 y^\prime}{\sqrt{1+y^{\prime 2}}} = \text{konst.}
+									$$
+									Még nevet nem adva a konstansnak, ez kicsit átírható:
+									$$
+																		\begin{aligned}
+									    \frac{y^\prime}{\sqrt{1+y^{\prime 2}}} &= \text{konst.} \\
+									    \frac{y^{\prime 2}}{1+y^{\prime 2}} &= \text{konst.} \\
+									    y^{\prime 2} &= \text{konst.} \\
+									    y^\prime &= \text{konst.} 
+									\end{aligned}
+									$$
+									amit nevezzünk el végre:
+									$$
+									    y^{\prime}(x) = m
+									$$
+									Ezt integrálva $x$ szerint megkapjuk a gyönyörű megoldást, miszerint:
+									$$
+									    y = mx + b
+									$$
+									tehát két pont között a legrövidebb út az egyenes.
+								</p>
 							</div>
 						</section>
 
